--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MUKESH - Portfolio Website</title>
-    <link rel="stylesheet" href="portfolioStyle.css">
-    <script src="portfolio.js"></script>
+    <title>ZPARK</title>
+    <link rel="stylesheet" href="zparkstyle.css">
+    <script src="zparkActions.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <script src="https://kit.fontawesome.com/573324bbcc.js" crossorigin="anonymous"></script>
     <link rel="icon" href="IMAGES/title_logo.PNG">
