--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
     <script src="zparkActions.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <script src="https://kit.fontawesome.com/573324bbcc.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="IMAGES/title_logo.PNG">
+    <link rel="icon" href="IMAGES/dummy logo.PNG">
 
 </head>
 <body>
     <div class="container" >
         <div class="header">
             <nav>
-                <img src="IMAGES/final_logo.PNG" id="logo">
+                <h1>ZPARK</h1>
                 <ul id="menu-list">
                     <li><a href="#" onclick="closeMenu()">Home</a></li>
                     <li><a href="#about" onclick="closeMenu()">About</a></li>
-                    <li><a href="#skillset" onclick="closeMenu()">Skills</a></li>
-                    <li><a href="#portfolio" onclick="closeMenu()">Portfolio</a></li>
+                    <li><a href="#services" onclick="closeMenu()">Services</a></li>
+                    <li><a href="#portfolio" onclick="closeMenu()">Works</a></li>
                     <li><a href="#contact" onclick="closeMenu()">Contact</a></li>
                     <li><div id="close-icon" class="close-icon" onclick="closeMenu()"><i class="fa-solid fa-xmark"></i></div></li> 
                 </ul>
@@ -29,8 +29,11 @@
             </nav>
             <div class="main" >
                 <div class="main-content">
-                  <h4>Web-Developer</h4>
-                  <h1>Hi, I'm <span class="textColor">MUKESH</span><br>Front-End Web Developer<br><span class="textColor span1">HTML</span>,<span class="textColor">CSS</span>,<span class="textColor">JavaScript</span> </h1>
+                  <!-- <h4>Digital Marketing Agency</h4> -->
+                  <!-- <h1>Hi, I'm <span class="textColor">MUKESH</span><br>Front-End Web Developer<br><span class="textColor span1">HTML</span>,<span class="textColor">CSS</span>,<span class="textColor">JavaScript</span> </h1> -->
+                  <h1>Ignite Your Brand With <span class="textColor">ZPARK!</span></h1><br>
+                  <span class="home-content"> Step into the perfect destination for growth marketing and let our complete squad of marketing minds help you achieve your business goals. With Zpark by your side, success is just a step away.</span><br>
+                  <a href=""><button class="btn">Give ZPARK a try</button></a>
                 </div>
                 <div class="main-img">
                 </div>
@@ -45,18 +48,15 @@
             <div class="about-row">
                 <div class="about-col-1"></div>
                 <div class="about-col-2">
-                    <h2 class="sub-heading">About me</h2>
-                    <p class="about-me">Welcome to my portfolio website <i id="heart" class="fa-solid fa-heart"></i> Glad to see you guys show interest in visiting my website.<i class="fa-solid fa-face-laugh-beam yellowColor"></i>
-                         I have listed my Skills, Experience, Education and Certification details below.
-                         Also I have listed my front-end works in the Portfolio section.
-                         Please click & explore and leave your feedback through message <i class="fa-solid fa-message yellowColor"></i> segment in contact page !!!</p>
-                    <ul class="head-section">
+                    <h2 class="sub-heading">Let's see what our customer says about ZPARK!</h2>
+                    <p class="about-me"></p>
+                    <!-- <ul class="head-section">
                         <li id="skills"  class="inactive active" onclick="changeDisplay('skill-section','skills')">Skills</li>
                         <li id="experience" class="inactive" onclick="changeDisplay('experience-section','experience')">Experience</li>
                         <li id="education" class="inactive " onclick="changeDisplay('education-section','education')">Education</li>
                         <li id="certificate" class="inactive" onclick="changeDisplay('certificate-section','certificate')">Certification</li>
-                    </ul>
-                    <div class="about-section">
+                    </ul> -->
+                    <!-- <div class="about-section">
                        <ul id="skill-section">
                           <li class="head-li">Web Development</li>
                           <li>Web App Development</li>
@@ -85,47 +85,78 @@
                           <li>Issued Apr-2022</li>
                           <li>Credential ID - 2CK AGA GVD</li>
                        </ul>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
     </div>
 
-     <!--------------------------------- SKILLS ----------------------------------->
+     <!--------------------------------- SERVICES ----------------------------------->
 
-     <div id="skillset">
-       <div class="skillset-container">
-            <h2 class="sub-heading">Skills</h2>
-            <div class="skillset-list">
+     <div id="services">
+       <div class="services-container">
+            <h2 class="services-sub-heading">We are specialized in (services offered)</h2>
+            <div class="services-list">
                 <div>
+                    <!-- <i class="fa-solid fa-laptop-code"></i> -->
+                    <!-- <i class="fa-solid fa-ranking-star"></i> -->
+                    <!-- <i class="fa-solid fa-bullseye"></i> -->
+                    <!-- <i class="fa-solid fa-chart-line"></i> -->
+                    <i class="fa-solid fa-magnifying-glass-chart"></i>
+                    <h2>SEO</h2>
+                   <p>Unlock your business's full potential with our SEO services that dominate search engine rankings and skyrocket your organic visibility, giving you the ultimate Zpark experience.</p>
+                   <!-- <a href="">Learn more</a> -->
+                </div>
+                <div>
+                    <!-- <i class="fa-solid fa-code"></i>   -->
                     <i class="fa-solid fa-laptop-code"></i>
-                   <h2>Web Design</h2>
-                   <p>Can create responsive website using languages html, css and make the website more interactive using javascript.</p>
-                   <a href="">Learn more</a>
+                    <h2>Web Design</h2>
+                    <p>Unleash the true potential of your online presence with our custom web design services that deliver a visually stunning and user-friendly website, leaving your audience in awe of the Zpark effect. </p>
+                    <!-- <a href="">Learn more</a> -->
                 </div>
                 <div>
-                    <i class="fa-solid fa-code"></i>  
-                    <h2>Front-End</h2>
-                    <p>Developed front-end features like pivot-placeholder,widget,errorcue in zohosheet using html, css and javascript. </p>
-                    <a href="">Learn more</a>
+                    <!-- <i class="fa-solid fa-rectangle-ad"></i> -->
+                    <i class="fa-solid fa-audio-description"></i>
+                    <h2>SEM</h2>
+                   <p>Transform your online advertising game and drive measurable results with our data-driven SEM services that deliver the ultimate Zpark effect.</p>
+                   <!-- <a href="">Learn more</a> -->
                 </div>
-                <div onmouseover="changebg('over','mob')" onmouseout="changebg('out','mob')">
-                    <!-- <i class="fa-brands fa-html5"></i>
-                    <i class="fa-brands fa-css3-alt"></i>
-                    <i class="fa-brands fa-square-js"></i> -->
+                <div>
+                   <i id="social-media" class="fa-brands fa-instagram"></i>
+                   <i id="social-media" class="fa-brands fa-facebook"></i> 
+                   <i id="social-media" class="fa-brands fa-twitter"></i>
+                   <i id="social-media" class="fa-brands fa-youtube"></i>
+                   <h2>SMM</h2>
+                   <p>Experience the Zpark effect with our expert social media marketing services that help you connect, engage, and convert your target audience.</p>
+                   <!-- <a href="">Learn more</a> -->
+                </div>
+                <div>
+                    <!-- <i class="fa-regular fa-file-video"></i> -->
+                    <i class="fa-regular fa-circle-play"></i>
+                    <h2>Video Marketing</h2>
+                   <p>Connect with your audience on a deeper level and unleash the full potential of your brand with our expert video marketing services that deliver captivating video content and leave a lasting impression.</p>
+                   <!-- <a href="">Learn more</a> -->
+                </div>
+                <div>
+                    <!-- <i class="fa-solid fa-chart-simple"></i> -->
+                    <i class="fa-solid fa-chart-line"></i>
+                    <h2>Data Analytics</h2>
+                   <p>Experience the power of predictive data analytics and unlock valuable insights that transform your business strategies, boost your ROI and ignite your growth with our expert data analysis services that deliver the ultimate Zpark effect.</p>
+                   <!-- <a href="">Learn more</a> -->
+                </div>
+                <!-- <div onmouseover="changebg('over','mob')" onmouseout="changebg('out','mob')">
                     <i class="fa-solid fa-laptop"></i>
                     <i id="mob" class="fa-solid fa-mobile-screen"></i>
                     <h2>Responsive Design</h2>
                     <p>Developed responsive websites where the UserInterface looks apt on mobile-view as well as desktop-view.</p>
-                    <a href="">Learn more</a>
-                </div>
+                </div> -->
             </div>
        </div>
      </div>
 
     <!-- ----------------------------------- Portfolio----------------------------------- -->
 
-    <div id="portfolio">
+    <!-- <div id="portfolio">
         <div class="portfolio-container">
             <h2 class="sub-heading">My Work</h2>
             <div class="portfolio-section">
@@ -158,7 +189,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- -------------------------------------------Contact--------------------------------------------- -->
     <div id="contact">
