--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container" >
         <div class="header">
             <nav>
-                <h1>ZPARK</h1>
+                <h1><i class="fa-solid fa-bolt"></i> ZPARK</h1>
                 <ul id="menu-list">
                     <li><a href="#" onclick="closeMenu()">Home</a></li>
                     <li><a href="#about" onclick="closeMenu()">About</a></li>
@@ -196,32 +196,31 @@
         <div class="contact-container">
             <div class="row-contact">
                 <div class="contact-left">
-                    <h2 class="sub-heading">Contact Me</h2> 
-                    <p><i class="fa-solid fa-paper-plane"></i> mukeshsivakumar97@gmail.com</p>
-                    <p><i class="fa-solid fa-square-phone"></i> 9894152665</p>
+                    <h2 class="sub-heading">Ready to ignite your brand and take your business to the next level?</h2> 
+                    <p class="contact-content">Contact us today to discuss your digital marketing needs and let's get started on your journey towards success!</p>
+                    <a href=""><button class="contact-btn">Get free site audit!</button></a>
                     <div class="contact-social-icons">
-                       <a href="https://www.facebook.com/ajay.mukesh.988" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                       <a href="https://www.instagram.com/mukesh_sivakumar_/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                       <a href="https://www.linkedin.com/in/mukesh-sivakumar-83a564166/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                       <a href="https://twitter.com/mukeshsivakuma4" target="_blank"><i class="fa-brands fa-twitter"></i></a> 
+                       <a><i class="fa-brands fa-facebook"></i></a>
+                       <a><i class="fa-brands fa-instagram"></i></a>
+                       <a><i class="fa-brands fa-linkedin"></i></a>
+                       <a><i class="fa-brands fa-twitter"></i></a> 
                     </div>
-                    <a href="IMAGES/MUKESH S.pdf" download><button class="btn" onclick="return download()">Download Resume</button></a>
+                    <!-- <a href="IMAGES/MUKESH S.pdf" download><button class="btn" onclick="return download()">Download Resume</button></a> -->
                 </div>
                 <div class="contact-right">
-                    <form name="submit-to-google-sheet">
+                    <!-- <form name="submit-to-google-sheet">
                         <input type="text" name="Name" placeholder="Your Name" required>
                         <input type="email" name="Email" placeholder="Your Email" required>
                         <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
                         <button type="submit" class="btn">Submit</button>
                     </form>
-                    <span id="msg"></span>
+                    <span id="msg"></span> -->
                 </div>
             </div>
         </div>
         <!-- ----------------------------------copyright--------------------------------- -->
         <div class="copyright">
-            <p>Copyright &copy; MUKESH. Created using <i id="html-icon" class="fa-brands fa-html5"></i> 
-                <i id="css-icon" class="fa-brands fa-css3-alt"></i> <i id="js-icon" class="fa-brands fa-square-js"></i> </p>
+            <p>Copyright &copy; ZPARK.in </p>
         </div>
     </div>
 
