unwanted html code removed

--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
             <div class="main" >
                 <div class="main-content">
                   <!-- <h4>Digital Marketing Agency</h4> -->
-                  <!-- <h1>Hi, I'm <span class="textColor">MUKESH</span><br>Front-End Web Developer<br><span class="textColor span1">HTML</span>,<span class="textColor">CSS</span>,<span class="textColor">JavaScript</span> </h1> -->
                   <h1>Ignite Your Brand With <span class="textColor">ZPARK!</span></h1><br>
                   <span class="home-content"> Step into the perfect destination for growth marketing and let our complete squad of marketing minds help you achieve your business goals. With Zpark by your side, success is just a step away.</span><br>
-                  <a href=""><button class="btn">Give ZPARK a try</button></a>
+                  <a href=""><button class="btn">Let's Connect</button></a>
                 </div>
                 <div class="main-img">
                 </div>
@@ -50,42 +49,6 @@
                 <div class="about-col-2">
                     <h2 class="sub-heading">Let's see what our customer says about ZPARK!</h2>
                     <p class="about-me"></p>
-                    <!-- <ul class="head-section">
-                        <li id="skills"  class="inactive active" onclick="changeDisplay('skill-section','skills')">Skills</li>
-                        <li id="experience" class="inactive" onclick="changeDisplay('experience-section','experience')">Experience</li>
-                        <li id="education" class="inactive " onclick="changeDisplay('education-section','education')">Education</li>
-                        <li id="certificate" class="inactive" onclick="changeDisplay('certificate-section','certificate')">Certification</li>
-                    </ul> -->
-                    <!-- <div class="about-section">
-                       <ul id="skill-section">
-                          <li class="head-li">Web Development</li>
-                          <li>Web App Development</li>
-                          <li class="head-li">HTML-CSS-JS</li>
-                          <li>Skilled in Html,Css,JavaScript</li>
-                          <li class="head-li">Responsive Design</li>
-                          <li>Responsive Web Design Development</li>
-                       </ul>
-                       <ul id="experience-section">
-                          <li class="head-li">May 2019 - Nov 2020</li>
-                          <li>Member Technical Staff at ZOHO Corporation Pvt Ltd.</li>
-                          <li class="head-li">Dec 2018 - Feb 2019</li>
-                          <li>Project Trainee at ZOHO Corporation Pvt Ltd.</li>
-                       </ul>
-                       <ul id="education-section">
-                          <li class="head-li">B.E(ECE) - 2019</li>
-                          <li>Alagappa Chettiar Govt. Engg. College - Karaikudi.</li>
-                          <li class="head-li">HSC - 2015</li>
-                          <li>Erode Hindu Kalvi Nilayam MHSS - Erode.</li>
-                          <li class="head-li">SSLC - 2013</li>
-                          <li>P.A.C.M HSS - Rajapalayam.</li>
-                       </ul>
-                       <ul id="certificate-section">
-                          <h4>Fundamentals of Digital Marketing</h4>
-                          <li>Google Certified Digital Marketing Course</li>
-                          <li>Issued Apr-2022</li>
-                          <li>Credential ID - 2CK AGA GVD</li>
-                       </ul>
-                    </div> -->
                 </div>
             </div>
         </div>
@@ -95,7 +58,7 @@
 
      <div id="services">
        <div class="services-container">
-            <h2 class="services-sub-heading">We are specialized in (services offered)</h2>
+            <h2 class="services-sub-heading">We are specialized in</h2>
             <div class="services-list">
                 <div>
                     <!-- <i class="fa-solid fa-laptop-code"></i> -->
@@ -205,16 +168,8 @@
                        <a><i class="fa-brands fa-linkedin"></i></a>
                        <a><i class="fa-brands fa-twitter"></i></a> 
                     </div>
-                    <!-- <a href="IMAGES/MUKESH S.pdf" download><button class="btn" onclick="return download()">Download Resume</button></a> -->
                 </div>
                 <div class="contact-right">
-                    <!-- <form name="submit-to-google-sheet">
-                        <input type="text" name="Name" placeholder="Your Name" required>
-                        <input type="email" name="Email" placeholder="Your Email" required>
-                        <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
-                        <button type="submit" class="btn">Submit</button>
-                    </form>
-                    <span id="msg"></span> -->
                 </div>
             </div>
         </div>
