home page image,bg changed and nav bar position fixed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container" >
         <div class="header">
             <nav>
-                <h1><i class="fa-solid fa-bolt"></i> ZPARK</h1>
+                <h1><i class="fa-solid fa-bolt"></i> zpark</h1>
                 <ul id="menu-list">
                     <li><a href="#" onclick="closeMenu()">Home</a></li>
                     <li><a href="#about" onclick="closeMenu()">About</a></li>
@@ -30,7 +30,7 @@
             <div class="main" >
                 <div class="main-content">
                   <!-- <h4>Digital Marketing Agency</h4> -->
-                  <h1>Ignite Your Brand With <span class="textColor">ZPARK!</span></h1><br>
+                  <h1>Ignite Your Brand With <span class="textColor">zpark!</span></h1><br>
                   <span class="home-content"> Step into the perfect destination for growth marketing and let our complete squad of marketing minds help you achieve your business goals. With Zpark by your side, success is just a step away.</span><br>
                   <a href=""><button class="btn">Let's Connect</button></a>
                 </div>
