font, background changed and overlap issue fixed

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="zparkActions.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <script src="https://kit.fontawesome.com/573324bbcc.js" crossorigin="anonymous"></script>
+    <!--google api's font family link-->
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <link rel="icon" href="IMAGES/dummy logo.PNG">
 
 </head>
@@ -21,7 +23,7 @@
                     <li><a href="#" onclick="closeMenu()">Home</a></li>
                     <li><a href="#about" onclick="closeMenu()">About</a></li>
                     <li><a href="#services" onclick="closeMenu()">Services</a></li>
-                    <li><a href="#portfolio" onclick="closeMenu()">Works</a></li>
+                    <!-- <li><a href="#portfolio" onclick="closeMenu()">Works</a></li> -->
                     <li><a href="#contact" onclick="closeMenu()">Contact</a></li>
                     <li><div id="close-icon" class="close-icon" onclick="closeMenu()"><i class="fa-solid fa-xmark"></i></div></li> 
                 </ul>
@@ -43,7 +45,7 @@
     <!------------------------------------ ABOUT --------------------------------------------->
 
     <div id="about">
-        <div class="about-container">
+        <div class="about-container">      
             <div class="about-row">
                 <div class="about-col-1"></div>
                 <div class="about-col-2">
@@ -175,7 +177,7 @@
         </div>
         <!-- ----------------------------------copyright--------------------------------- -->
         <div class="copyright">
-            <p>Copyright &copy; ZPARK.in </p>
+            <p>Copyright &copy; ZPARK.in 2026. All Rights Reserved</p>
         </div>
     </div>
 
