--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container" >
         <div class="header">
             <nav>
-                <h1><i class="fa-solid fa-bolt"></i>zpark</h1>
+                <h1><a href=""><i class="fa-solid fa-bolt"></i>zpark</a></h1>
                 <ul id="menu-list">
                     <li><a href="#" onclick="closeMenu()">Home</a></li>
                     <li><a href="#about" onclick="closeMenu()">About</a></li>
