To check pull changes

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
                   <img src="IMAGES/calculator-work.PNG" alt="calculator using javascript">
                     <div class="task-content">
                      <h3>Calculator</h3>
+                     <p> Testing host commit - pull changes </p>
                      <p>Created an interactive calculator task using HTML, CSS and Javascript.
                         Click the icon below to preview the site.</p>
                      <a href="https://mukeshsivakumar.github.io/Calculator/" target="_blank"><i class="fa-solid fa-up-right-from-square"></i></a>
